--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>لوحة تحكم البوت</title>
+  <title>موقع تحكم البوت</title>
   <style>
     body {
       background-color: #000;
