--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         });
 
 
-        await fetch('https://your-backend-domain/send-welcome', {
+        await fetch('https://tubular-parfait-58a9e4.netlify.app/', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ userId: user.id })
